--- a/.godot/editor/project_metadata.cfg
+++ b/.godot/editor/project_metadata.cfg
@@ -1,6 +1,6 @@
 [editor_metadata]
 
-executable_path="G:/Program Files/Godot 4 Stable/Godot 4.2.1/Godot_v4.2.1-stable_win64.exe"
+executable_path="C:/Godot_v4.2.1-stable_win64.exe/Godot_v4.2.1-stable_win64.exe"
 
 [debug_options]
 
@@ -23,11 +23,12 @@ CSGBox3D:scale=true
 StandardMaterial3D:uv1_scale=true
 StandardMaterial3D:uv2_scale=true
 DirectionalLight3D:scale=true
+StaticBody3D:scale=true
 
 [dialog_bounds]
 
 create_new_node=Rect2(1950, 190, 900, 700)
-project_settings=Rect2(1950, 190, 900, 700)
+project_settings=Rect2(940, 3105, 1382, 694)
 
 [script_setup]
 
