--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -12,26 +12,26 @@ dock_floating={}
 dock_split_2=0
 dock_split_3=0
 dock_hsplit_1=0
-dock_hsplit_2=364
-dock_hsplit_3=-428
+dock_hsplit_2=611
+dock_hsplit_3=-373
 dock_hsplit_4=0
 dock_filesystem_split=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://Scripts/Player/Player.gd")
-dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://Scripts/", "res://Scripts/Player/", "res://Prefabs/", "res://Prefabs/Player/", "res://Models/", "res://Level/")
+dock_filesystem_selected_paths=PackedStringArray("res://Models/HexTextures/hexa_Material_Roughness.png")
+dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://Prefabs/Gurn/", "res://Models/", "res://Models/HexTextures/", "res://Level/")
 dock_3="Scene,Import"
 dock_4="FileSystem"
 dock_5="Inspector,Node,History"
 
 [EditorNode]
 
-open_scenes=PackedStringArray("res://Level/ProtoLevel.tscn")
+open_scenes=PackedStringArray("res://Prefabs/Player/player.tscn", "res://Level/ProtoLevel.tscn", "res://Prefabs/Gurn/Gurn.tscn", "res://Prefabs/hex/root_scene.tscn")
 current_scene="res://Level/ProtoLevel.tscn"
-center_split_offset=-552
+center_split_offset=0
 selected_default_debugger_tab_idx=0
-selected_main_editor_idx=2
+selected_main_editor_idx=1
 selected_bottom_panel_item=0
 
 [ScriptEditor]
@@ -41,6 +41,9 @@ selected_script="res://Scripts/Player/Player.gd"
 open_help=[]
 script_split_offset=70
 list_split_offset=0
+window_rect=Rect2i(3360, 828, 1280, 649)
+window_screen=2
+window_screen_rect=Rect2i(3360, 805, 1280, 672)
 
 [ShaderEditor]
 
