--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -28,7 +28,7 @@ dock_5="Inspector,Node,History"
 [EditorNode]
 
 open_scenes=PackedStringArray("res://Prefabs/Player/player.tscn", "res://Level/ProtoLevel.tscn", "res://Prefabs/Gurn/Gurn.tscn", "res://Prefabs/hex/root_scene.tscn")
-current_scene="res://Level/ProtoLevel.tscn"
+current_scene="res://Prefabs/hex/root_scene.tscn"
 center_split_offset=0
 selected_default_debugger_tab_idx=0
 selected_main_editor_idx=1
