--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -12,15 +12,15 @@ dock_floating={}
 dock_split_2=0
 dock_split_3=0
 dock_hsplit_1=0
-dock_hsplit_2=611
-dock_hsplit_3=-373
+dock_hsplit_2=325
+dock_hsplit_3=-448
 dock_hsplit_4=0
 dock_filesystem_split=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://Models/Grid/Light/texture_07.png")
-dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://Prefabs/Gurn/", "res://Models/", "res://Models/GunTextures/", "res://Models/Grid/", "res://Models/Grid/Light/", "res://Models/Grid/Dark/", "res://Level/")
+dock_filesystem_selected_paths=PackedStringArray("res://Scripts/StateMachine/State/State.gd")
+dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://Scripts/", "res://Scripts/StateMachine/", "res://Scripts/StateMachine/State/", "res://Scripts/Globals/", "res://Prefabs/Gurn/", "res://Models/", "res://Models/Grid/", "res://Level/")
 dock_3="Scene,Import"
 dock_4="FileSystem"
 dock_5="Inspector,Node,History"
@@ -28,7 +28,7 @@ dock_5="Inspector,Node,History"
 [EditorNode]
 
 open_scenes=PackedStringArray("res://Prefabs/Player/player.tscn", "res://Level/ProtoLevel.tscn", "res://Prefabs/Gurn/Gurn.tscn", "res://Prefabs/hex/root_scene.tscn")
-current_scene="res://Level/ProtoLevel.tscn"
+current_scene="res://Prefabs/Player/player.tscn"
 center_split_offset=0
 selected_default_debugger_tab_idx=0
 selected_main_editor_idx=1
@@ -36,10 +36,10 @@ selected_bottom_panel_item=0
 
 [ScriptEditor]
 
-open_scripts=["res://Scripts/Player/Player.gd"]
+open_scripts=["res://Prefabs/Player/PlayerStates/CrouchingPlayerState.gd", "res://Scripts/UI/Debug/Debug.gd", "res://Scripts/Globals/Debug.gd", "res://Prefabs/Player/PlayerStates/IdlePlayerState.gd", "res://Scripts/Player/Player.gd", "res://Scripts/UI/Reticle/Reticle.gd", "res://Prefabs/Player/PlayerStates/SlidingPlayerState.gd", "res://Prefabs/Player/PlayerStates/SprintingPlayerState.gd", "res://Scripts/StateMachine/State/State.gd", "res://Scripts/StateMachine/StateMachine.gd", "res://Prefabs/Player/PlayerStates/WallkingPlayerState.gd"]
 selected_script="res://Scripts/Player/Player.gd"
 open_help=[]
-script_split_offset=70
+script_split_offset=196
 list_split_offset=0
 window_rect=Rect2i(3360, 828, 1280, 649)
 window_screen=2
