--- a/.godot/global_script_class_cache.cfg
+++ b/.godot/global_script_class_cache.cfg
@@ -1,1 +1,49 @@
-list=Array[Dictionary]([])
+list=Array[Dictionary]([{
+"base": &"State",
+"class": &"CrouchingPlayerState",
+"icon": "",
+"language": &"GDScript",
+"path": "res://Prefabs/Player/PlayerStates/CrouchingPlayerState.gd"
+}, {
+"base": &"CharacterBody3D",
+"class": &"PlayerCharacter",
+"icon": "",
+"language": &"GDScript",
+"path": "res://Scripts/Player/Player.gd"
+}, {
+"base": &"State",
+"class": &"PlayerIdleState",
+"icon": "",
+"language": &"GDScript",
+"path": "res://Prefabs/Player/PlayerStates/IdlePlayerState.gd"
+}, {
+"base": &"State",
+"class": &"SlidingPlayerState",
+"icon": "",
+"language": &"GDScript",
+"path": "res://Prefabs/Player/PlayerStates/SlidingPlayerState.gd"
+}, {
+"base": &"State",
+"class": &"SprintingPlayerState",
+"icon": "",
+"language": &"GDScript",
+"path": "res://Prefabs/Player/PlayerStates/SprintingPlayerState.gd"
+}, {
+"base": &"Node",
+"class": &"State",
+"icon": "",
+"language": &"GDScript",
+"path": "res://Scripts/StateMachine/State/State.gd"
+}, {
+"base": &"Node",
+"class": &"StateMachine",
+"icon": "",
+"language": &"GDScript",
+"path": "res://Scripts/StateMachine/StateMachine.gd"
+}, {
+"base": &"State",
+"class": &"WalkingPlayerState",
+"icon": "",
+"language": &"GDScript",
+"path": "res://Prefabs/Player/PlayerStates/WallkingPlayerState.gd"
+}])
