--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -28,7 +28,7 @@ dock_5="Inspector,Node,History"
 [EditorNode]
 
 open_scenes=PackedStringArray("res://Prefabs/Player/player.tscn", "res://Level/ProtoLevel.tscn", "res://Prefabs/Gurn/Gurn.tscn", "res://Prefabs/hex/root_scene.tscn")
-current_scene="res://Prefabs/Player/player.tscn"
+current_scene="res://Level/ProtoLevel.tscn"
 center_split_offset=0
 selected_default_debugger_tab_idx=0
 selected_main_editor_idx=1
@@ -37,7 +37,7 @@ selected_bottom_panel_item=0
 [ScriptEditor]
 
 open_scripts=["res://Prefabs/Player/PlayerStates/CrouchingPlayerState.gd", "res://Scripts/UI/Debug/Debug.gd", "res://Scripts/Globals/Debug.gd", "res://Prefabs/Player/PlayerStates/IdlePlayerState.gd", "res://Scripts/Player/Player.gd", "res://Scripts/UI/Reticle/Reticle.gd", "res://Prefabs/Player/PlayerStates/SlidingPlayerState.gd", "res://Prefabs/Player/PlayerStates/SprintingPlayerState.gd", "res://Scripts/StateMachine/State/State.gd", "res://Scripts/StateMachine/StateMachine.gd", "res://Prefabs/Player/PlayerStates/WallkingPlayerState.gd"]
-selected_script="res://Scripts/Player/Player.gd"
+selected_script="res://Scripts/Globals/Debug.gd"
 open_help=[]
 script_split_offset=196
 list_split_offset=0
