added Falling and Jumping Player states

--- a/.godot/global_script_class_cache.cfg
+++ b/.godot/global_script_class_cache.cfg
@@ -5,6 +5,12 @@ list=Array[Dictionary]([{
 "language": &"GDScript",
 "path": "res://Prefabs/Player/PlayerStates/CrouchingPlayerState.gd"
 }, {
+"base": &"State",
+"class": &"JumpingPlayerState",
+"icon": "",
+"language": &"GDScript",
+"path": "res://Prefabs/Player/JumpingPlayerState.gd"
+}, {
 "base": &"CharacterBody3D",
 "class": &"PlayerCharacter",
 "icon": "",
