--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -19,8 +19,8 @@ dock_filesystem_split=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://Scripts/StateMachine/State/State.gd")
-dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://Scripts/", "res://Scripts/StateMachine/", "res://Scripts/StateMachine/State/", "res://Scripts/Globals/", "res://Prefabs/Gurn/", "res://Models/", "res://Models/Grid/", "res://Level/")
+dock_filesystem_selected_paths=PackedStringArray("res://script_templates/State/PlayerState.gd")
+dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://script_templates/", "res://script_templates/State/", "res://Scripts/StateMachine/", "res://Scripts/StateMachine/State/", "res://Scripts/Globals/", "res://Prefabs/Gurn/")
 dock_3="Scene,Import"
 dock_4="FileSystem"
 dock_5="Inspector,Node,History"
@@ -28,7 +28,7 @@ dock_5="Inspector,Node,History"
 [EditorNode]
 
 open_scenes=PackedStringArray("res://Prefabs/Player/player.tscn", "res://Level/ProtoLevel.tscn", "res://Prefabs/Gurn/Gurn.tscn", "res://Prefabs/hex/root_scene.tscn")
-current_scene="res://Level/ProtoLevel.tscn"
+current_scene="res://Prefabs/Player/player.tscn"
 center_split_offset=0
 selected_default_debugger_tab_idx=0
 selected_main_editor_idx=1
@@ -36,14 +36,14 @@ selected_bottom_panel_item=0
 
 [ScriptEditor]
 
-open_scripts=["res://Prefabs/Player/PlayerStates/CrouchingPlayerState.gd", "res://Scripts/UI/Debug/Debug.gd", "res://Scripts/Globals/Debug.gd", "res://Prefabs/Player/PlayerStates/IdlePlayerState.gd", "res://Scripts/Player/Player.gd", "res://Scripts/UI/Reticle/Reticle.gd", "res://Prefabs/Player/PlayerStates/SlidingPlayerState.gd", "res://Prefabs/Player/PlayerStates/SprintingPlayerState.gd", "res://Scripts/StateMachine/State/State.gd", "res://Scripts/StateMachine/StateMachine.gd", "res://Prefabs/Player/PlayerStates/WallkingPlayerState.gd"]
-selected_script="res://Scripts/Globals/Debug.gd"
+open_scripts=["res://Prefabs/Player/PlayerStates/CrouchingPlayerState.gd", "res://Scripts/UI/Debug/Debug.gd", "res://Scripts/Globals/Debug.gd", "res://Prefabs/Player/FallingPlayerState.gd", "res://Prefabs/Player/PlayerStates/IdlePlayerState.gd", "res://Prefabs/Player/JumpingPlayerState.gd", "res://Scripts/Player/Player.gd", "res://script_templates/State/PlayerState.gd", "res://Scripts/UI/Reticle/Reticle.gd", "res://Prefabs/Player/PlayerStates/SlidingPlayerState.gd", "res://Prefabs/Player/PlayerStates/SprintingPlayerState.gd", "res://Scripts/StateMachine/State/State.gd", "res://script_templates/State/state.gd", "res://Scripts/StateMachine/StateMachine.gd", "res://Prefabs/Player/PlayerStates/WallkingPlayerState.gd"]
+selected_script="res://Prefabs/Player/FallingPlayerState.gd"
 open_help=[]
 script_split_offset=196
 list_split_offset=0
-window_rect=Rect2i(3360, 828, 1280, 649)
-window_screen=2
-window_screen_rect=Rect2i(3360, 805, 1280, 672)
+window_rect=Rect2i(0, 198, 1440, 829)
+window_screen=1
+window_screen_rect=Rect2i(0, 175, 1440, 852)
 
 [ShaderEditor]
 
