--- a/.godot/editor/script_editor_cache.cfg
+++ b/.godot/editor/script_editor_cache.cfg
@@ -6,8 +6,8 @@ state={
 "column": 0,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 18,
-"scroll_position": 0.0,
+"row": 46,
+"scroll_position": 26.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -35,7 +35,7 @@ state={
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
 "row": 19,
-"scroll_position": 8.0,
+"scroll_position": 0.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -81,7 +81,7 @@ state={
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
 "row": 32,
-"scroll_position": 0.0,
+"scroll_position": 10.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -112,8 +112,8 @@ state={
 "column": 0,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 16,
-"scroll_position": 0.0,
+"row": 22,
+"scroll_position": 14.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -126,9 +126,13 @@ state={
 "column": 0,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 17,
-"scroll_position": 2.0,
-"selection": false,
+"row": 36,
+"scroll_position": 21.0,
+"selection": true,
+"selection_from_column": 0,
+"selection_from_line": 36,
+"selection_to_column": 61,
+"selection_to_line": 38,
 "syntax_highlighter": "GDScript"
 }
 
@@ -137,12 +141,16 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 0,
+"column": 58,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 16,
-"scroll_position": 2.0,
-"selection": false,
+"row": 27,
+"scroll_position": 16.0,
+"selection": true,
+"selection_from_column": 25,
+"selection_from_line": 27,
+"selection_to_column": 58,
+"selection_to_line": 27,
 "syntax_highlighter": "GDScript"
 }
 
@@ -151,11 +159,11 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 22,
+"column": 24,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 33,
-"scroll_position": 11.0,
+"row": 30,
+"scroll_position": 43.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -193,11 +201,11 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 19,
+"column": 0,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 12,
-"scroll_position": 0.0,
+"row": 26,
+"scroll_position": 19.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -207,11 +215,67 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
+"column": 17,
+"folded_lines": Array[int]([]),
+"h_scroll_position": 0,
+"row": 19,
+"scroll_position": 14.0,
+"selection": false,
+"syntax_highlighter": "GDScript"
+}
+
+[res://Prefabs/Player/Weapon/SubViewport.gd]
+
+state={
+"bookmarks": PackedInt32Array(),
+"breakpoints": PackedInt32Array(),
+"column": 19,
+"folded_lines": Array[int]([]),
+"h_scroll_position": 0,
+"row": 7,
+"scroll_position": 0.0,
+"selection": false,
+"syntax_highlighter": "GDScript"
+}
+
+[res://Prefabs/Player/Weapon/WeaponCamera.gd]
+
+state={
+"bookmarks": PackedInt32Array(),
+"breakpoints": PackedInt32Array(),
 "column": 0,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 14,
-"scroll_position": 1.0,
+"row": 7,
+"scroll_position": 0.0,
+"selection": false,
+"syntax_highlighter": "GDScript"
+}
+
+[res://Prefabs/Player/WeaponManager/WeaponManager.gd]
+
+state={
+"bookmarks": PackedInt32Array(),
+"breakpoints": PackedInt32Array(),
+"column": 0,
+"folded_lines": Array[int]([]),
+"h_scroll_position": 0,
+"row": 0,
+"scroll_position": 0.0,
+"selection": false,
+"syntax_highlighter": "GDScript"
+}
+
+[res://Prefabs/Player/Weapon/Gun.gd]
+
+state={
+"bookmarks": PackedInt32Array(),
+"breakpoints": PackedInt32Array(),
+"column": 28,
+"folded_lines": Array[int]([]),
+"h_scroll_position": 0,
+"row": 27,
+"scroll_position": 16.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
