--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -19,15 +19,15 @@ dock_filesystem_split=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://script_templates/State/PlayerState.gd")
-dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://script_templates/", "res://script_templates/State/", "res://Scripts/StateMachine/", "res://Scripts/StateMachine/State/", "res://Scripts/Globals/", "res://Prefabs/Gurn/")
+dock_filesystem_selected_paths=PackedStringArray("res://Models/Hellsing Arms Casull/hellsing_arms_casull.glb")
+dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://script_templates/State/", "res://Scripts/StateMachine/", "res://Scripts/StateMachine/State/", "res://Scripts/Globals/", "res://Prefabs/Gurn/", "res://Models/", "res://Models/Hellsing Arms Casull/", "res://addons/")
 dock_3="Scene,Import"
 dock_4="FileSystem"
 dock_5="Inspector,Node,History"
 
 [EditorNode]
 
-open_scenes=PackedStringArray("res://Prefabs/Player/player.tscn", "res://Level/ProtoLevel.tscn", "res://Prefabs/Gurn/Gurn.tscn", "res://Prefabs/hex/root_scene.tscn")
+open_scenes=PackedStringArray("res://Prefabs/Player/player.tscn", "res://Level/ProtoLevel.tscn", "res://Prefabs/Gurn/Gurn.tscn", "res://Prefabs/HandGun/HandGun.tscn", "res://Prefabs/hex/root_scene.tscn")
 current_scene="res://Prefabs/Player/player.tscn"
 center_split_offset=0
 selected_default_debugger_tab_idx=0
@@ -36,17 +36,27 @@ selected_bottom_panel_item=0
 
 [ScriptEditor]
 
-open_scripts=["res://Prefabs/Player/PlayerStates/CrouchingPlayerState.gd", "res://Scripts/UI/Debug/Debug.gd", "res://Scripts/Globals/Debug.gd", "res://Prefabs/Player/FallingPlayerState.gd", "res://Prefabs/Player/PlayerStates/IdlePlayerState.gd", "res://Prefabs/Player/JumpingPlayerState.gd", "res://Scripts/Player/Player.gd", "res://script_templates/State/PlayerState.gd", "res://Scripts/UI/Reticle/Reticle.gd", "res://Prefabs/Player/PlayerStates/SlidingPlayerState.gd", "res://Prefabs/Player/PlayerStates/SprintingPlayerState.gd", "res://Scripts/StateMachine/State/State.gd", "res://script_templates/State/state.gd", "res://Scripts/StateMachine/StateMachine.gd", "res://Prefabs/Player/PlayerStates/WallkingPlayerState.gd"]
-selected_script="res://Prefabs/Player/FallingPlayerState.gd"
-open_help=[]
+open_scripts=["res://Prefabs/Player/PlayerStates/CrouchingPlayerState.gd", "res://Scripts/UI/Debug/Debug.gd", "res://Scripts/Globals/Debug.gd", "res://Prefabs/Player/FallingPlayerState.gd", "res://Prefabs/Player/Weapon/Gun.gd", "res://Prefabs/Player/PlayerStates/IdlePlayerState.gd", "res://Prefabs/Player/JumpingPlayerState.gd", "res://Scripts/Player/Player.gd", "res://script_templates/State/PlayerState.gd", "res://Scripts/UI/Reticle/Reticle.gd", "res://Prefabs/Player/PlayerStates/SlidingPlayerState.gd", "res://Prefabs/Player/PlayerStates/SprintingPlayerState.gd", "res://Scripts/StateMachine/State/State.gd", "res://script_templates/State/state.gd", "res://Scripts/StateMachine/StateMachine.gd", "res://Prefabs/Player/Weapon/SubViewport.gd", "res://Prefabs/Player/PlayerStates/WallkingPlayerState.gd", "res://Prefabs/Player/Weapon/WeaponCamera.gd", "res://Prefabs/Player/WeaponManager/WeaponManager.gd"]
+selected_script="res://Prefabs/Player/Weapon/Gun.gd"
+open_help=["Camera3D"]
 script_split_offset=196
 list_split_offset=0
-window_rect=Rect2i(0, 198, 1440, 829)
-window_screen=1
-window_screen_rect=Rect2i(0, 175, 1440, 852)
+window_rect=Rect2i(3361, 837, 1262, 631)
+window_screen=2
+window_screen_rect=Rect2i(3360, 805, 1280, 672)
 
 [ShaderEditor]
 
 open_shaders=[]
 split_offset=0
 selected_shader=""
+
+[editor_log]
+
+log_filter_0=true
+log_filter_2=true
+log_filter_1=false
+log_filter_3=true
+log_filter_4=true
+collapse=false
+show_search=true
